# sarah

./: .gitmodules  LICENSE  Makefile  README.md  SARAH.cabal  docker-compose.yml  index.html  master.yml  sarah-middleware.cabal  sarah-persist.cabal  sarah.cabal  settings.yml  slave.yml  stack.yaml
app/: GUI.hs  Main.hs  Middleware.hs
c/: dht22.h
sarah-broker/: sarah-broker.cabal
sarah-frontend/: README.md  elm-package.json  index.html  sarah-frontend.cabal  stack.yaml
sarah-frontend-old/: Makefile  index.html
sarah-frontend-old/src/: Model.elm  Prelude.elm  Template.elm  View.elm
sarah-frontend-old/src/Home/: Message.elm
sarah-frontend-old/src/Sensors/: Commands.elm  Message.elm  Model.elm  Update.elm  View.elm
sarah-frontend/src/: Commands.elm  Main.elm  Main.hs  Message.elm  Model.elm  Ports.elm  Prelude.elm  Template.elm  Types.elm  Update.elm  Util.elm  View.elm
sarah-frontend/src/Graphics/UI/Bootstrap/: Builder.hs  Class.hs  Glyphicon.hs  Style.hs
sarah-frontend/src/Graphics/UI/Threepenny/: Extra.hs
sarah-frontend/src/Home/: Update.elm
sarah-frontend/src/Log/: Message.elm  Model.elm  Update.elm  View.elm
sarah-frontend/src/Sarah/: GUI.hs
sarah-frontend/src/Sarah/GUI/: Model.hs  Remote.hs  Templates.hs  Widgets.hs
sarah-frontend/src/Sarah/GUI/Remote/: Example.hs
sarah-frontend/src/Sarah/GUI/Remote/AC/: Toshiba.hs
sarah-frontend/src/Sarah/GUI/Remote/Power/: HS110.hs
sarah-frontend/src/Sarah/GUI/Remote/Sensor/: DHT22.hs
sarah-frontend/src/Sensors/: Commands.elm  Message.elm  Model.elm  Update.elm  View.elm
sarah-frontend/static/: sarah.html
sarah-frontend/static/css/: sarah.css
sarah-middleware/: .dockerignore  Dockerfile  Makefile  README.md  master.yml  sarah-middleware.cabal  settings.yml  slave.yml  stack.yaml
sarah-middleware/app/: Main.hs
sarah-middleware/c/: dht22.h  irslinger.h
sarah-middleware/src/: Api.hs  ComplicatedGlobalnet.hs  Master.hs  Messages.hs  Model.hs  Physics.hs  Settings.hs  Slave.hs  Types.hs  Util.hs
sarah-middleware/src/Api/: Device.hs  Sensor.hs
sarah-middleware/src/Device/AC/: Toshiba.hs
sarah-middleware/src/Import/: DeriveJSON.hs  MkBinary.hs
sarah-middleware/src/Master/: Messages.hs
sarah-middleware/src/Raspberry/: GPIO.hs  Hardware.hs  I2C.hs  IP.hs
sarah-middleware/src/Sarah/: Middleware.hs
sarah-middleware/src/Sarah/Middleware/: Api.hs  Client.hs  Device.hs  Distributed.hs  Master.hs  Model.hs  Remote.hs  Settings.hs  Slave.hs  Types.hs  Util.hs
sarah-middleware/src/Sarah/Middleware/Api/: Device.hs  Sensor.hs  Status.hs
sarah-middleware/src/Sarah/Middleware/Device/: Example.hs
sarah-middleware/src/Sarah/Middleware/Device/AC/: Toshiba.hs
sarah-middleware/src/Sarah/Middleware/Device/Power/: HS110.hs
sarah-middleware/src/Sarah/Middleware/Device/Sensor/: DHT22.hs
sarah-middleware/src/Sarah/Middleware/Master/: Messages.hs
sarah-middleware/src/Sarah/Middleware/Model/: Interface.hs
sarah-middleware/src/Sarah/Middleware/Slave/: Messages.hs
sarah-middleware/src/Slave/: Messages.hs
sarah-persist/: .dockerignore  Dockerfile  LICENSE  Makefile  docker-compose.yml  sarah-persist.cabal  stack.yaml
sarah-persist/app/: Main.hs
sarah-persist/src/: Api.hs  Config.hs  Lib.hs  Model.hs  Settings.hs  Types.hs
sarah-persist/src/Api/: Sensor.hs
sarah-persist/src/Import/: DeriveJSON.hs
sarah-persist/src/Sarah/Persist/: Api.hs  Client.hs  Model.hs  Settings.hs  Types.hs
sarah-persist/src/Sarah/Persist/Api/: Sensor.hs
src/: Api.hs  Combinators.hs  Crypto.hs  Main.elm  Main.hs  Message.elm  Messages.hs  Model.elm  Model.hs  Physics.hs  Ports.elm  Prelude.elm  Settings.hs  Slave.hs  Types.elm  Types.hs  Update.elm  View.elm
src/Api/: Sensor.hs
src/Graphics/UI/: Bootstrap.hs  Material.hs
src/Graphics/UI/Bootstrap/: Builder.hs  Class.hs
src/Graphics/UI/Material/: Class.hs  Icon.hs  Reactive.hs  Types.hs
src/Graphics/UI/Threepenny/: Extra.hs
src/Home/: Model.elm
src/Import/: DeriveJSON.hs
src/Persist/: Client.hs  Types.hs
src/Raspberry/: GPIO.hs  Hardware.hs
src/Sarah/: GUI.hs  Middleware.hs
src/Sarah/GUI/: Client.hs  Model.hs  Reactive.hs  Remote.hs  Schedule.hs  Websocket.hs  Widgets.hs
src/Sarah/GUI/Remote/: Example.hs
src/Sarah/GUI/Remote/AC/: Toshiba.hs
src/Sarah/GUI/Remote/Power/: HS110.hs
src/Sarah/GUI/Remote/Sensor/: DHT22.hs
src/Sarah/Middleware/: Api.hs  Client.hs  Database.hs  Device.hs  Distributed.hs  Master.hs  Model.hs  Servant.hs  Server.hs  Slave.hs  Types.hs  Util.hs
src/Sarah/Middleware/Api/: Device.hs  Sensor.hs  Status.hs
src/Sarah/Middleware/Database/: Types.hs
src/Sarah/Middleware/Device/: Example.hs
src/Sarah/Middleware/Device/AC/: Toshiba.hs
src/Sarah/Middleware/Device/Power/: HS110.hs
src/Sarah/Middleware/Device/Sensor/: DHT22.hs
src/Sarah/Middleware/Master/: Messages.hs
src/Sarah/Middleware/Slave/: Messages.hs
src/Sarah/Persist/: Model.hs  Settings.hs  Types.hs
src/Sarah/Persist/Api/: Log.hs  Sensor.hs
src/Sensors/: Model.elm
static/: sarah.html
static/css/: sarah.css
