name:                SARAH
version:             0.1.0.0
synopsis:            Smart Augmented Reality Automated Home
description:         Please see README.md
homepage:            http://github.com/chrisbloecker/sarah
license:             BSD3
license-file:        LICENSE
author:              Christopher Blöcker
maintainer:          chrisbloecker@googlemail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable sarah-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , new-template
  default-language:    Haskell2010

test-suite sarah-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , new-template
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chrisbloecker/sarah
