name:                sarah
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/chrisbloecker/sarah
license:             BSD3
license-file:        LICENSE
author:              Christopher Blöcker
maintainer:          chrisbloecker@googlemail.com
copyright:           2016-2017 Christopher Blöcker
category:            Web
build-type:          Simple
cabal-version:       >=1.10


library
  hs-source-dirs:      src
  exposed-modules:     Crypto
                     , Graphics.UI.Material
                     , Graphics.UI.Material.Class
                     , Graphics.UI.Material.Icon
                     , Graphics.UI.Material.Reactive
                     , Graphics.UI.Threepenny.Extra
                     , Physics
                     , Raspberry.GPIO
                     , Raspberry.Hardware
                     , Raspberry.I2C
                     , Raspberry.IP
                     , Sarah.GUI
                     , Sarah.GUI.Model
                     , Sarah.GUI.Remote
                     , Sarah.GUI.Remote.AC.Toshiba
                     , Sarah.GUI.Remote.Example
                     , Sarah.GUI.Remote.Power.HS110
                     , Sarah.GUI.Remote.Sensor.DHT22
                     , Sarah.GUI.Websocket
                     , Sarah.Middleware
                     , Sarah.Middleware.Api
                     , Sarah.Middleware.Device
                     , Sarah.Middleware.Distributed
                     , Sarah.Middleware.Device.AC.Toshiba
                     , Sarah.Middleware.Device.Example
                     , Sarah.Middleware.Device.Power.HS110
                     , Sarah.Middleware.Device.Sensor.DHT22
                     , Sarah.Middleware.Master
                     , Sarah.Middleware.Master.Messages
                     , Sarah.Middleware.Model
                     , Sarah.Middleware.Model.Interface
                     , Sarah.Middleware.Server
                     , Sarah.Middleware.Servant
                     , Sarah.Middleware.Slave
                     , Sarah.Middleware.Slave.Messages
                     , Sarah.Middleware.Util
                     , Sarah.Persist.Api
                     , Sarah.Persist.Api.Log
                     , Sarah.Persist.Api.Sensor
                     , Sarah.Persist.Client
                     , Sarah.Persist.Model
                     , Sarah.Persist.Settings
                     , Sarah.Persist.Types
  other-modules:       Import.DeriveJSON
  c-sources:           src/Sarah/Middleware/Device/AC/Toshiba.c
                     , src/Sarah/Middleware/Device/Sensor/DHT22.c
  cc-options:          -Wall -O2
  extra-libraries:     m
                     , pigpio
                     , pthread
                     , rt
  include-dirs:        c
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , binary
                     , bytestring
                     , clock
                     , constraints
                     , containers
                     , contravariant
                     , distributed-process
                     , distributed-process-extras
                     , either
                     , envy
                     , hashable
                     , http-client
                     , inline-c
                     , monad-logger
                     , mtl
                     , network
                     , network-socket-options
                     , network-transport-tcp
                     , persistent
                     , persistent-template
                     , servant-server
                     , servant-client
                     , stm
                     , text
                     , threepenny-gui
                     , time
                     , unordered-containers
                     , uuid
                     , vector
                     , wai
                     , warp
                     , websockets
  default-language:    Haskell2010


executable backend
  hs-source-dirs:      app
  main-is:             Backend.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , monad-logger
                     , persistent
                     , persistent-mysql
                     , sarah
                     , servant-server
                     , warp
                     , wai
                     , wai-extra
                     , wai-cors
                     , yaml
  default-language:    Haskell2010


executable middleware
  hs-source-dirs:      app
  main-is:             Middleware.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , distributed-process
                     , envy
                     , http-client
                     , mtl
                     , network-transport
                     , network-transport-tcp
                     , optparse-applicative
                     , sarah
                     , servant-client
                     , wai
                     , wai-cors
                     , wai-extra
                     , warp
                     , websockets
                     , yaml
  default-language:    Haskell2010


executable gui
  hs-source-dirs:      app
  main-is:             GUI.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base
                     , bytestring
                     , http-client
                     , mtl
                     , optparse-applicative
                     , sarah
                     , servant-client
                     , stm
                     , text
                     , threepenny-gui
                     , unordered-containers
                     , websockets
