name:                sarah-frontend
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/sarah-frontend#readme
license:             BSD3
license-file:        LICENSE
author:              Christopher Blöcker
maintainer:          example@example.com
copyright:           2016-2017 Christopher Blöcker
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable sarah-frontend
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Graphics.UI.Threepenny.Extra
                     , Sarah.GUI
                     , Sarah.GUI.Model
                     , Sarah.GUI.Remote
                     , Sarah.GUI.Widgets
  default-language:    Haskell2010
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , blaze-html
                     , blaze-markup
                     , bytestring
                     , either
                     , http-client
                     , lens
                     , mtl
                     , optparse-applicative
                     , sarah-middleware
                     , servant-client
                     , text
                     , threepenny-gui
