name:                sarah-frontend
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/sarah-frontend#readme
license:             BSD3
license-file:        LICENSE
author:              Christopher Blöcker
maintainer:          example@example.com
copyright:           2016-2017 Christopher Blöcker
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable sarah-frontend
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Graphics.UI.Bootstrap
                     , Graphics.UI.Bootstrap.Builder
                     , Graphics.UI.Bootstrap.Class
                     , Graphics.UI.Bootstrap.Glyphicon
                     , Graphics.UI.Bootstrap.Style
                     , Graphics.UI.Threepenny.Extra
                     , Sarah.GUI
                     , Sarah.GUI.Model
                     , Sarah.GUI.Remote
                     , Sarah.GUI.Remote.AC.Toshiba
                     , Sarah.GUI.Remote.Example
                     , Sarah.GUI.Remote.Power.HS110
                     , Sarah.GUI.Remote.Sensor.DHT22
                     , Sarah.GUI.Widgets
  default-language:    Haskell2010
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , blaze-html
                     , blaze-markup
                     , bytestring
                     , containers
                     , either
                     , http-client
                     , lens
                     , mtl
                     , optparse-applicative
                     , sarah-middleware
                     , servant-client
                     , stm
                     , text
                     , threepenny-gui
