name:                sarah-middleware
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/chrisbloecker/sarah-middleware
license:             BSD3
license-file:        LICENSE
author:              Christopher Blöcker
maintainer:          chrisbloecker@googlemail.com
copyright:           2016 Christopher Blöcker
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Api
                     , Api.Sensor
                     , Device.AC.Toshiba
                     , Import.DeriveJSON
                     , Import.MkBinary
                     , Master
                     , Master.Messages
                     , Model
                     , Settings
                     , Slave
                     , Slave.Messages
                     , Types
                     , Util
  c-sources:           src/Device/AC/Toshiba.c
  cc-options:          -Wall -O2
  extra-libraries:     -lm -lpigpio -pthread -lrt
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , binary
                     , distributed-process
                     , distributed-process-extras
                     , envy
                     , http-client
                     , inline-c
                     , mtl
                     , network
                     , network-transport-tcp
                     , sarah-persist
                     , servant-server
                     , servant-client
                     , text
                     , time
                     , wai
                     , warp
  default-language:    Haskell2010

executable sarah-middleware-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , distributed-process
                     , envy
                     , http-client
                     , network-transport
                     , network-transport-tcp
                     , sarah-middleware
                     , servant-client
                     , wai
                     , wai-cors
                     , wai-extra
                     , warp
  default-language:    Haskell2010

test-suite sarah-middleware-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sarah-middleware
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chrisbloecker/sarah/sarah-middleware
