name:                sarah-middleware
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/chrisbloecker/sarah-middleware
license:             BSD3
license-file:        LICENSE
author:              Christopher Blöcker
maintainer:          chrisbloecker@googlemail.com
copyright:           2016 Christopher Blöcker
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Import.DeriveJSON
                     , Import.MkBinary
                     , Raspberry.GPIO
                     , Raspberry.Hardware
                     , Raspberry.I2C
                     , Sarah.Middleware.Api
                     , Sarah.Middleware.Api.Device
                     , Sarah.Middleware.Api.Sensor
                     , Sarah.Middleware.Api.Status
                     , Sarah.Middleware.Client
                     , Sarah.Middleware.Device
                     , Sarah.Middleware.Device.AC.Toshiba
                     , Sarah.Middleware.Device.Sensor.DHT22
                     , Sarah.Middleware.Master
                     , Sarah.Middleware.Master.Messages
                     , Sarah.Middleware.Model
                     , Sarah.Middleware.Slave
                     , Sarah.Middleware.Slave.Messages
                     , Sarah.Middleware.Util
  c-sources:           src/Sarah/Middleware/Device/AC/Toshiba.c
                     , src/Sarah/Middleware/Device/Sensor/DHT22.c
  cc-options:          -Wall -O2
  extra-libraries:     m
                     , pigpio
                     , pthread
                     , rt
--  extra-lib-dirs:      /usr/local/lib
  include-dirs:        c
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , binary
                     , bytestring
                     , containers
                     , distributed-process
                     , distributed-process-extras
                     , http-client
                     , inline-c
                     , lens
                     , mtl
                     , network
                     , network-transport-tcp
                     , sarah-persist
                     , servant-server
                     , servant-client
                     , text
                     , time
                     , transformers
                     , vector
                     , wai
                     , warp
  default-language:    Haskell2010

executable sarah-middleware-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , distributed-process
                     , envy
                     , http-client
                     , mtl
                     , network-transport
                     , network-transport-tcp
                     , optparse-applicative
                     , sarah-middleware
                     , servant-client
                     , wai
                     , wai-cors
                     , wai-extra
                     , warp
                     , yaml
  default-language:    Haskell2010

test-suite sarah-middleware-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sarah-middleware
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chrisbloecker/sarah/sarah-middleware
