name:                sarah-persist
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/sarah/sarah-persist#readme
license:             BSD3
license-file:        LICENSE
author:              Christopher Blöcker
maintainer:          chrisbloecker@googlemail.com
copyright:           2016 Christopher Blöcker
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Api
                     , Api.Sensor
                     , Config
                     , Model
                     , Settings
                     , Types
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , either
                     , envy
                     , monad-logger
                     , mtl
                     , persistent
                     , persistent-mysql
                     , persistent-template
                     , servant-js
                     , servant-server
                     , text
                     , time
                     , wai
                     , wai-cors
  default-language:    Haskell2010

executable sarah-persist-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , envy
                     , monad-logger
                     , persistent
                     , sarah-persist
                     , servant-server
                     , warp
                     , wai-extra
  default-language:    Haskell2010

test-suite sarah-persist-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sarah-persist
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/sarah/sarah-persist
